--- a/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
+++ b/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
@@ -22,15 +22,34 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                 @Html.DisplayFor(modelItem => item.disease_name)
+                @Html.DisplayFor(modelItem => item.disease_name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.match)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@Html.DisplayFor(modelItem => item.disease_name)" aria-expanded="false" aria-controls="collapse_@Html.DisplayFor(modelItem => item.disease_name)">
+                    Button with data-bs-target
+                </button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="collapse" id="collapse_@Html.DisplayFor(modelItem => item.disease_name)">
+                    <!-- matched symptoms -->
+                    <div class="card card-body">
+                        <span style="color:green;">matched symptoms</span>
+                        @foreach (string matched_symptoms in item.matched_symptoms)
+                        {
+                             <div>@matched_symptoms</div>
+                        }
+                        <span style="color:red;">unmatched symptoms</span>
+                        @foreach (string unmatched_symptoms in item.unmatched_symptoms)
+                        {
+                             <div>@unmatched_symptoms</div>
+                        }
+                    </div>
+                </div>
             </td>
         </tr>
 }
