--- a/EyeHistoria/Views/Admin/View.cshtml
+++ b/EyeHistoria/Views/Admin/View.cshtml
@@ -10,7 +10,16 @@
                 @Html.DisplayNameFor(model => model.SymptomID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.SymptomName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AdminID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LastModifiedBy)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
             </th>
             <th></th>
         </tr>
@@ -22,7 +31,16 @@
                 @Html.DisplayFor(modelItem => item.SymptomID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.SymptomName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AdminID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastModifiedBy)
+            </td>
+            <td>
+                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
