test radio boxes 1 2 3 4 5

--- a/EyeHistoria/Views/Home/Index.cshtml
+++ b/EyeHistoria/Views/Home/Index.cshtml
@@ -18,6 +18,24 @@
                     <div class="symptom">
                         <label for="eyeRedness">Eye Redness</label>
                         <input type="checkbox" id="eyeRedness" name="eyeRedness" value="eyeRedness" data-onset="eyeRednesstext" data-location="eyeRednesstext2">
+                        <br />
+                        <div>
+                            <input type="radio" class="btn-check" name="eyeRednessOption" id="eyeRednessOption1" autocomplete="off" value="1">
+                            <label class="btn btn-outline-primary" for="eyeRednessOption1">1</label>
+
+                            <input type="radio" class="btn-check" name="eyeRednessOption" id="eyeRednessOption2" autocomplete="off" value="2">
+                            <label class="btn btn-outline-primary" for="eyeRednessOption2">2</label>
+
+                            <input type="radio" class="btn-check" name="eyeRednessOption" id="eyeRednessOption3" autocomplete="off" value="3">
+                            <label class="btn btn-outline-primary" for="eyeRednessOption3">3</label>
+
+                            <input type="radio" class="btn-check" name="eyeRednessOption" id="eyeRednessOption4" autocomplete="off" value="4">
+                            <label class="btn btn-outline-primary" for="eyeRednessOption4">4</label>
+
+                            <input type="radio" class="btn-check" name="eyeRednessOption" id="eyeRednessOption5" autocomplete="off" value="5">
+                            <label class="btn btn-outline-primary" for="eyeRednessOption5">5</label>
+                        </div>
+                        
                     </div>
 
                     <div class="symptom">
