--- a/EyeHistoria/Views/Home/Index.cshtml
+++ b/EyeHistoria/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IndexViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -15,43 +16,85 @@
         <div class=row>
             <div class="col-sm-6">
                 <form method="post" action="~/Home/SubmitDiagnosis">
-                    <div class="symptom">
-                        <label for="eyeRedness">Eye Redness</label>
-                        <input type="checkbox" id="eyeRedness" name="eyeRedness" value="eyeRedness" data-onset="eyeRednesstext" data-location="eyeRednesstext2">
-                    </div>
-
-                    <div class="symptom">
-                        <label for="eyeItch">Eye Itch</label>
-                        <input type="checkbox" id="eyeItch" name="eyeItch" value="eyeItch" data-onset="eyeItchtext" data-location="eyeItchtext2">
-                    </div>
-
-                    <div class="symptom">
-                        <label for="eyeSwelling">Eye Swelling</label>
-                        <input type="checkbox" id="eyeSwelling" name="eyeSwelling" value="eyeSwelling" data-onset="eyeSwellingtext" data-location="eyeSwellingtext2">
-                    </div>
+                    @foreach (var symptom_item in Model.list_of_symptoms)
+                    {
+                        <div class="symptom">
+                            <label for="@symptom_item.SymptomName">@symptom_item.SymptomName</label>
+                            <input type="checkbox" id="@symptom_item.SymptomName" name="@symptom_item.SymptomName" value="@symptom_item.SymptomName" 
+                                        data-onset="@symptom_item.SymptomName@Html.Raw("_onset")" 
+                                        data-location="@symptom_item.SymptomName@Html.Raw("_location")"
+                                        data-duration="@symptom_item.SymptomName@Html.Raw("_duration")"
+                                        data-characteristics="@symptom_item.SymptomName@Html.Raw("_characteristics")"
+                                        data-aggravation="@symptom_item.SymptomName@Html.Raw("_aggravation")"
+                                        data-relief="@symptom_item.SymptomName@Html.Raw("_relief")"
+                                        data-timing="@symptom_item.SymptomName@Html.Raw("_timing")"
+                                        data-severity="@symptom_item.SymptomName@Html.Raw("_severity")">
+                        </div>
+                    }
+    
                     <input type="submit" value="Submit Result" />
                 </form>
             </div>
             <div class="col-sm-6">
                     <div class="onset">
                         <p>Onset</p>
-                        <p id="eyeRednesstext" style="display:none">Does your eye redness come and go? <span class="close">&times;</span></p>
-                        <p id="eyeItchtext" style="display:none">Does your eye itch only in the morning/night? <span class="close">&times;</span></p>
-                        <p id="eyeSwellingtext" style="display:none">Is there any specific time when your eyes swell? <span class="close">&times;</span></p>
+                        @foreach (var onset_question in Model.onset_questions)
+                        {
+                            <p id="@onset_question.SymptomName@Html.Raw("_onset")" style="display:none">@onset_question.QuestionText <span class="close">&times;</span></p>
+                        }
                     </div>
 
                     <div class="location">
                         <p>Location</p>
-                        <p id="eyeRednesstext2" style="display:none">Does the eye redness affect both eyes? <span class="close">&times;</span></p>
-                        <p id="eyeItchtext2" style="display:none">Does the eye itch affect all parts of the eyes? <span class="close">&times;</span></p>
-                        <p id="eyeSwellingtext2" style="display:none">Is the swelling localized to one eye or both? <span class="close">&times;</span></p>
-                    </div>               
-            </div>
-        </div>
+                        @foreach (var location_question in Model.location_questions)
+                        {
+                            <p id="@location_question.SymptomName@Html.Raw("_location")" style="display:none">@location_question.QuestionText <span class="close">&times;</span></p>
+                        }
+                    </div>
 
-        <!-- Add more symptoms and checkboxes here -->
-        <div class="row">
-           
+                    <div class="duration">
+                        <p>Duration</p>
+                        @foreach (var duration_question in Model.duration_questions)
+                        {
+                            <p id="@duration_question.SymptomName@Html.Raw("_duration")" style="display:none">@duration_question.QuestionText <span class="close">&times;</span></p>
+                        }
+                    </div>
+                    <div class="characteristics">
+                        <p>Characteristics</p>
+                        @foreach (var characteristics_question in Model.characteristics_questions)
+                        {
+                            <p id="@characteristics_question.SymptomName@Html.Raw("_characteristics")" style="display:none">@characteristics_question.QuestionText <span class="close">&times;</span></p>
+                        }
+                    </div>
+                    <div class="aggravation">
+                        <p>Aggravation</p>
+                        @foreach (var aggravation_question in Model.aggravation_questions)
+                        {
+                            <p id="@aggravation_question.SymptomName@Html.Raw("_aggravation")" style="display:none">@aggravation_question.QuestionText <span class="close">&times;</span></p>
+                        }
+                    </div>
+                    <div class="relief">
+                        <p>Relief</p>
+                        @foreach (var relief_question in Model.relief_questions)
+                        {
+                            <p id="@relief_question.SymptomName@Html.Raw("_relief")" style="display:none">@relief_question.QuestionText <span class="close">&times;</span></p>
+                        }
+                    </div>
+                    <div class="timing">
+                        <p>Timing</p>
+                        @foreach (var timing_question in Model.timing_questions)
+                        {
+                            <p id="@timing_question.SymptomName@Html.Raw("_timing")" style="display:none">@timing_question.QuestionText <span class="close">&times;</span></p>
+                        }
+                    </div>
+                    <div class="severity">
+                        <p>Severity</p>
+                        @foreach (var severity_question in Model.severity_questions)
+                        {
+                            <p id="@severity_question.SymptomName@Html.Raw("_severity")" style="display:none">@severity_question.QuestionText <span class="close">&times;</span></p>
+                        }
+                    </div>
+            </div>
         </div>
     </div>
 
