--- a/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
+++ b/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
@@ -10,10 +10,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.disease_name)
+                @Html.DisplayNameFor(model => model.Disease_name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.match)
+                @Html.DisplayNameFor(model => model.Match)
             </th>
             <th></th>
         </tr>
@@ -22,29 +22,29 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.disease_name)
+                @Html.DisplayFor(modelItem => item.Disease_name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.match)
+                @Html.DisplayFor(modelItem => item.Match)
             </td>
             <td>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@Html.DisplayFor(modelItem => item.disease_name)" aria-expanded="false" aria-controls="collapse_@Html.DisplayFor(modelItem => item.disease_name)">
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@Html.DisplayFor(modelItem => item.Disease_name)" aria-expanded="false" aria-controls="collapse_@Html.DisplayFor(modelItem => item.Disease_name)">
                     Button with data-bs-target
                 </button>
             </td>
         </tr>
         <tr>
             <td>
-                <div class="collapse" id="collapse_@Html.DisplayFor(modelItem => item.disease_name)">
+                <div class="collapse" id="collapse_@Html.DisplayFor(modelItem => item.Disease_name)">
                     <!-- matched symptoms -->
                     <div class="card card-body">
                         <span style="color:green;">matched symptoms</span>
-                        @foreach (string matched_symptoms in item.matched_symptoms)
+                        @foreach (string matched_symptoms in item.Matched_symptoms)
                         {
                              <div>@matched_symptoms</div>
                         }
                         <span style="color:red;">unmatched symptoms</span>
-                        @foreach (string unmatched_symptoms in item.unmatched_symptoms)
+                        @foreach (string unmatched_symptoms in item.Unmatched_symptoms)
                         {
                              <div>@unmatched_symptoms</div>
                         }
