--- a/EyeHistoria/Views/Admin/AddQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/AddQuestions.cshtml
@@ -13,11 +13,6 @@
         <form asp-action="AddQuestions">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="QuestionID" class="control-label"></label>
-                <input asp-for="QuestionID" class="form-control" />
-                <span asp-validation-for="QuestionID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="QuestionText" class="control-label"></label>
                 <input asp-for="QuestionText" class="form-control" />
                 <span asp-validation-for="QuestionText" class="text-danger"></span>
@@ -70,7 +65,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ViewQuestions">Back to List</a>
 </div>
 
 @section Scripts {
