--- a/EyeHistoria/Views/Admin/ViewQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/ViewQuestions.cshtml
@@ -79,9 +79,8 @@
                 @Html.DisplayFor(modelItem => item.FollowUpID)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Update", "UpdateQuestion", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "DeleteQuestions", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
