--- a/EyeHistoria/Views/Shared/_Layout.cshtml
+++ b/EyeHistoria/Views/Shared/_Layout.cshtml
@@ -31,9 +31,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ViewDiagnosis">View Diagnosis</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ViewQuestions">View Diagnosis</a>
-                        </li>
+                <li class="nav-item dropdown" style="padding-top: 17px">
+                    <a class="nav-link dropdown-toggle" href="#" id="deliveryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Questions
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="deliveryDropdown">
+                        <li><a class="dropdown-item" href="~/Admin/ViewQuestions">View Questions</a></li>
+                        <li><a class="dropdown-item" href="~/Admin/AddQuestions">Add Questions</a></li>
+                    </ul>
+                </li>
                     </ul>
                 </div>
             </div>
