--- a/EyeHistoria/Views/Admin/Create.cshtml
+++ b/EyeHistoria/Views/Admin/Create.cshtml
@@ -12,7 +12,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SymptomName" class="control-label"></label>
-                <input asp-for="SymptomName" class="form-control" />
+                <input asp-for="SymptomName" class="form-control" placeholder="e.g. Eye Redness, Blurred Vision, etc." />
                 <span asp-validation-for="SymptomName" class="text-danger"></span>
             </div>
             <div class="form-group">
