Made some final tweaks for new database amendments

--- a/EyeHistoria/Views/Admin/AddDiagnosis.cshtml
+++ b/EyeHistoria/Views/Admin/AddDiagnosis.cshtml
@@ -8,8 +8,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DiagnosisName" class="control-label"></label>
-                <input asp-for="DiagnosisName" class="form-control" />
+                <input asp-for="DiagnosisName" class="form-control" placeholder="e.g. Cataracts" />
                 <span asp-validation-for="DiagnosisName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LearnMore" class="control-label"></label>
+                <input asp-for="LearnMore" class="form-control" placeholder="e.g. https://www.nei.nih.gov/learn-about-eye-health/eye-conditions-and-diseases/cataracts" />
+                <span asp-validation-for="LearnMore" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="List_of_diagnosis_symptoms_checkbox" class="control-label"></label>
@@ -27,6 +32,11 @@
                     }
                 </div>
                 <span asp-validation-for="List_of_diagnosis_symptoms_checkbox" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Tests" class="control-label"></label>
+                <input asp-for="Tests" class="form-control" placeholder="e.g. Slit Lamp, Pupil Dilation, Potential Acuity Test" />
+                <span asp-validation-for="Tests" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AdminID" class="control-label"></label>
