--- a/EyeHistoria/Views/Admin/DeleteQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/DeleteQuestions.cshtml
@@ -75,6 +75,6 @@
     
     <form asp-action="DeleteQuestions">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="ViewQuestions">Back to List</a>
     </form>
 </div>
