--- a/EyeHistoria/Views/Home/Index.cshtml
+++ b/EyeHistoria/Views/Home/Index.cshtml
@@ -21,14 +21,14 @@
                         <div class="symptom">
                             <label for="@symptom_item.SymptomName">@symptom_item.SymptomName</label>
                             <input type="checkbox" id="@symptom_item.SymptomName" name="@symptom_item.SymptomName" value="@symptom_item.SymptomName" 
-                                        data-onset="@symptom_item.SymptomName@Html.Raw("_onset")" 
-                                        data-location="@symptom_item.SymptomName@Html.Raw("_location")"
-                                        data-duration="@symptom_item.SymptomName@Html.Raw("_duration")"
-                                        data-characteristics="@symptom_item.SymptomName@Html.Raw("_characteristics")"
-                                        data-aggravation="@symptom_item.SymptomName@Html.Raw("_aggravation")"
-                                        data-relief="@symptom_item.SymptomName@Html.Raw("_relief")"
-                                        data-timing="@symptom_item.SymptomName@Html.Raw("_timing")"
-                                        data-severity="@symptom_item.SymptomName@Html.Raw("_severity")">
+                                        data-onset="@symptom_item.SymptomName@Html.Raw("_Onset")" 
+                                        data-location="@symptom_item.SymptomName@Html.Raw("_Location")"
+                                        data-duration="@symptom_item.SymptomName@Html.Raw("_Duration")"
+                                        data-characteristics="@symptom_item.SymptomName@Html.Raw("_Characteristics")"
+                                        data-aggravation="@symptom_item.SymptomName@Html.Raw("_Aggravation")"
+                                        data-relief="@symptom_item.SymptomName@Html.Raw("_Relief")"
+                                        data-timing="@symptom_item.SymptomName@Html.Raw("_Timing")"
+                                        data-severity="@symptom_item.SymptomName@Html.Raw("_Severity")">
                         </div>
                     }
     
@@ -36,67 +36,35 @@
                 </form>
             </div>
             <div class="col-sm-6">
-                    <div class="onset">
-                        <p>Onset</p>
-                        @foreach (var onset_question in Model.Onset_questions)
-                        {
-                            <p id="@onset_question.SymptomName@Html.Raw("_onset")" style="display:none">
-                                @onset_question.QuestionText 
-                                <span class="close">&times;</span>
-                            </p>
-                        }
-                    </div>
+                @{
+                    List<string> OLDCARTS = new List<string> { "Onset", "Location", "Duration", "Characteristics", "Aggravation", "Relief", "Timing", "Severity" };
+                    // iterates through OLDCARTS acronym
+                    foreach(var ancronym in OLDCARTS)
+                    {
+                        <div>
+                            <p>@Html.Raw(ancronym)</p> 
+                            @foreach(var question in Model.General_Questions)
+                            {
+                                // if the ancronym matches pass through
+                                if (question.General_Question.Type == ancronym)
+                                {
+                                    // Each general question
+                                    <ul id="@($"{question.General_Question.SymptomName}_{ancronym}")" style="display:none">
+                                        @question.General_Question.QuestionText
+                                        @foreach(var follow_up_qns in question.Follow_Questions)
+                                        {
+                                            <li>@follow_up_qns.QuestionText</li>
+                                        }
+                                        <span class="close">&times;</span>
+                                    </ul>
+                                }
+                                
+                            }
+                        </div>
 
-                    <div class="location">
-                        <p>Location</p>
-                        @foreach (var location_question in Model.Location_questions)
-                        {
-                            <p id="@location_question.SymptomName@Html.Raw("_location")" style="display:none">@location_question.QuestionText <span class="close">&times;</span></p>
-                        }
-                    </div>
-
-                    <div class="duration">
-                        <p>Duration</p>
-                        @foreach (var duration_question in Model.Duration_questions)
-                        {
-                            <p id="@duration_question.SymptomName@Html.Raw("_duration")" style="display:none">@duration_question.QuestionText <span class="close">&times;</span></p>
-                        }
-                    </div>
-                    <div class="characteristics">
-                        <p>Characteristics</p>
-                        @foreach (var characteristics_question in Model.Characteristics_questions)
-                        {
-                            <p id="@characteristics_question.SymptomName@Html.Raw("_characteristics")" style="display:none">@characteristics_question.QuestionText <span class="close">&times;</span></p>
-                        }
-                    </div>
-                    <div class="aggravation">
-                        <p>Aggravation</p>
-                        @foreach (var aggravation_question in Model.Aggravation_questions)
-                        {
-                            <p id="@aggravation_question.SymptomName@Html.Raw("_aggravation")" style="display:none">@aggravation_question.QuestionText <span class="close">&times;</span></p>
-                        }
-                    </div>
-                    <div class="relief">
-                        <p>Relief</p>
-                        @foreach (var relief_question in Model.Relief_questions)
-                        {
-                            <p id="@relief_question.SymptomName@Html.Raw("_relief")" style="display:none">@relief_question.QuestionText <span class="close">&times;</span></p>
-                        }
-                    </div>
-                    <div class="timing">
-                        <p>Timing</p>
-                        @foreach (var timing_question in Model.Timing_questions)
-                        {
-                            <p id="@timing_question.SymptomName@Html.Raw("_timing")" style="display:none">@timing_question.QuestionText <span class="close">&times;</span></p>
-                        }
-                    </div>
-                    <div class="severity">
-                        <p>Severity</p>
-                        @foreach (var severity_question in Model.Severity_questions)
-                        {
-                            <p id="@severity_question.SymptomName@Html.Raw("_severity")" style="display:none">@severity_question.QuestionText <span class="close">&times;</span></p>
-                        }
-                    </div>
+                    }
+                }
+                    
             </div>
         </div>
     </div>
