--- a/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
+++ b/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewData["Title"] = "SubmitDiagnosis";
 }
+@{
+    Layout = "_Layout.cshtml";
+}
 
 <h1>SubmitDiagnosis</h1>
+
 
 <table class="table">
     <thead>
