everything else except calulation

--- a/EyeHistoria/Views/Home/Index.cshtml
+++ b/EyeHistoria/Views/Home/Index.cshtml
@@ -13,9 +13,10 @@
 </head>
 <body>
     <div class="container">
+        <form method="post" action="~/Home/SubmitDiagnosis">
         <div class=row>
             <div class="col-sm-6">
-                <form method="post" action="~/Home/SubmitDiagnosis">
+                
                     @foreach (var symptom_item in Model.List_of_symptoms)
                     {
                         <div class="symptom">
@@ -33,7 +34,6 @@
                     }
     
                     <input type="submit" value="Submit Result" />
-                </form>
             </div>
             <div class="col-sm-6">
                 @{
@@ -43,6 +43,7 @@
                     {
                         <div>
                             <p>@Html.Raw(ancronym)</p> 
+                            @*Iterates through all the questions*@
                             @foreach(var question in Model.General_Questions)
                             {
                                 // if the ancronym matches pass through
@@ -53,7 +54,27 @@
                                         @question.General_Question.QuestionText
                                         @foreach(var follow_up_qns in question.Follow_Questions)
                                         {
-                                            <li>@follow_up_qns.QuestionText</li>
+                                            // the follow up questions
+                                            <li>
+                                                @follow_up_qns.QuestionText
+                                                <br/>
+                                                @if (follow_up_qns.Data_question.DataType == "Yes/No") // Yes/No options
+                                                {
+                                                    <input type="radio" class="btn-check" name="@($"{question.General_Question.SymptomName}_Yes_No")" id="@($"{question.General_Question.SymptomName}_Yes")" autocomplete="off" value="Yes">
+                                                    <label class="btn btn-outline-primary" for="@($"{question.General_Question.SymptomName}_Yes")">Yes</label>
+                                                    <input type="radio" class="btn-check" name="@($"{question.General_Question.SymptomName}_Yes_No")" id="@($"{question.General_Question.SymptomName}_No")" autocomplete="off" value="Yes">
+                                                    <label class="btn btn-outline-primary" for="@($"{question.General_Question.SymptomName}_No")">No</label>
+                                                }
+                                                else if (follow_up_qns.Data_question.DataType == "Severity") // Severity level
+                                                {
+                                                    // Severity input from 1 to 5
+                                                    for (int i = 1; i < 6; i++)
+                                                    {
+                                                        <input type="radio" class="btn-check" name="@question.General_Question.SymptomName@Html.Raw("_Option")" id="@question.General_Question.SymptomName@i" autocomplete="off" value="@i">
+                                                        <label class="btn btn-outline-primary" for="@question.General_Question.SymptomName@i">@i</label>
+                                                    }
+                                                }
+                                            </li>
                                         }
                                         <span class="close">&times;</span>
                                     </ul>
@@ -67,6 +88,7 @@
                     
             </div>
         </div>
+        </form>
     </div>
 
     <!-- Passing Model.List_of_symptoms to Index.js -->
