nav bar applied to all pages.

--- a/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
+++ b/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<EyeHistoria.Models.Diagnosis>
+<link rel="stylesheet" type="text/css" href="~/css/Index.css">
+
 
 <p>
     <a asp-action="AddDiagnosis">Create New</a>
