--- a/EyeHistoria/Views/Admin/ViewQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/ViewQuestions.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<EyeHistoria.Models.Question>
+<link rel="stylesheet" type="text/css" href="~/css/Index.css">
+
 
 @{
     ViewData["Title"] = "ViewQuestions";
