--- a/EyeHistoria/Views/Home/Index.cshtml
+++ b/EyeHistoria/Views/Home/Index.cshtml
@@ -9,7 +9,11 @@
 <head>
     <meta charset="utf‐8" />
     <meta name="viewport" content="width=device‐width, initial‐scale=1.0" />
-    <link rel="stylesheet" href="~/css/Index.css" asp‐append‐version="true" />
+    <link rel="stylesheet" href="~/EyeHistoria.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/css/Index.css">
+
+          
+
 </head>
 <body>
     <div class="container">
