--- a/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
+++ b/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
@@ -3,9 +3,12 @@
 @{
     ViewData["Title"] = "SubmitDiagnosis";
 }
-@{
-    Layout = "_Layout.cshtml";
-}
+
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/EyeHistoria.styles.css"
+      asp-append-version="true" />
+<link rel="stylesheet" type="text/css" href="~/css/Index.css">
+
 
 <h1>SubmitDiagnosis</h1>
 
