--- a/EyeHistoria/Views/Admin/Index.cshtml
+++ b/EyeHistoria/Views/Admin/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<EyeHistoria.Models.Symptoms>
+<link rel="stylesheet" type="text/css" href="~/css/Index.css">
+
 
 <p>
     <a asp-action="Create">Create New</a>
