--- a/EyeHistoria/Views/Shared/_Layout.cshtml
+++ b/EyeHistoria/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - EyeHistoria</title>
-    
-    <link rel="stylesheet" href="~/EyeHistoria.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/EyeHistoria.styles.css" media="screen" runat="server" 
+		  asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -16,23 +16,24 @@
                     <ul class="navbar-nav flex-grow-1">
                         <span class="logo">EyeHistoria</span>
                         <li style="float:right">
-                            <a class="active" asp-area="" asp-controller="#" asp-action="Index">Home</a>
+                            <a class="active" asp-controller="" asp-controller="Admin" asp-action="Index">Home</a>
                         </li>
                         <li style="float:right">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="#" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="#" asp-action="Privacy">Privacy</a>
                         </li>
                         <li style="float:right">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">View Symptoms</a>
+                            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Index">View Symptoms</a>
                         </li>
                         <li style="float:right">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ViewDiagnosis">View Diagnosis</a>
+                            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ViewDiagnosis">View Diagnosis</a>
                         </li>
                         <li style="float:right">
-                            <a class="dropdown-item" href="~/Admin/ViewQuestions">FAQs</a>
+                            <a class="nav-link" href="~/Admin/ViewQuestions">FAQs</a>
                         </li>
             </ul>
-                       
-                        <li style="float:right">
+        </nav>
+
+        <li style="float:right">
                             <a class="nav-link dropdown-toggle" href="#" id="deliveryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Questions
                             </a>
@@ -41,7 +42,7 @@
                                 <li><a class="dropdown-item" href="~/Admin/AddQuestions">Add Questions</a></li>
                             </ul>
                         </li>
-                    
+                   
             
         
     </header>
