--- a/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
+++ b/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
@@ -63,9 +63,7 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                <a asp-action="UpdateDiagnosis" asp-controller="Admin" asp-route-id="@item.DiagnosisID">Edit</a> |
             </td>
         </tr>
 }
